<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nombreEditText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#434343"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:context=".views.FormularioActivity"
    tools:showIn="@layout/activity_formulario">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayaut"
            android:layout_width="match_parent"
            android:layout_height="307dp">

            <ImageView
                android:id="@+id/imageViewEjemploImagen"
                android:layout_width="82dp"
                android:layout_height="142dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewPersonaje"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButtonAdd"
                android:layout_width="25dp"
                android:layout_height="0dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:clickable="true"
                android:foreground="@android:drawable/ic_menu_add"
                app:backgroundTint="#6B696D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewPersonaje"
                android:layout_width="101dp"
                android:layout_height="129dp"
                android:background="#00FFFFFF"
                android:backgroundTint="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.407"
                tools:srcCompat="@tools:sample/avatars" />

            <Switch
                android:id="@+id/switchEnPartida"
                android:layout_width="111dp"
                android:layout_height="0dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/en_partida"
                android:textColor="#999999"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinnerRaza"
                android:layout_width="132dp"
                android:layout_height="0dp"
                android:layout_marginTop="60dp"

                android:popupBackground="#FFFF"
                android:textColor="#999999"
                app:layout_constraintEnd_toStartOf="@+id/floatingActionButtonAdd"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextFechaF"
                android:layout_width="0dp"
                android:layout_height="41dp"

                android:layout_marginTop="48dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="#00FFFFFF"
                android:ems="10"
                android:hint="@string/fecha"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ButtonDatePicket"
                app:layout_constraintTop_toBottomOf="@+id/switchEnPartida" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextPeso"
                style="@style/Numbers"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                app:layout_constraintStart_toEndOf="@+id/imageViewPeso"
                app:layout_constraintTop_toBottomOf="@+id/TextNombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/peso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/peso" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextGenero"
                style="@style/campo"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:hint="@string/gnero"
                app:layout_constraintStart_toEndOf="@+id/imageViewP"
                app:layout_constraintTop_toBottomOf="@+id/TextPeso">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/genero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextNombre"
                style="@style/campo"


                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="30dp"
                android:hint="@string/nombre"
                app:layout_constraintStart_toEndOf="@+id/imageViewusuario"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageViewusuario"
                android:layout_width="31dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_action_user" />

            <ImageView
                android:id="@+id/imageViewPeso"
                android:layout_width="31dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="45dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewusuario"
                app:srcCompat="@drawable/ic_accessibility" />

            <ImageView
                android:id="@+id/imageViewP"
                android:layout_width="31dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="45dp"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPeso"
                app:srcCompat="@drawable/ic_wc" />

            <Button
                android:id="@+id/ButtonDatePicket"
                android:layout_width="43dp"
                android:layout_height="39dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/ic_date_range"

                android:shadowColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/TextGenero" />

            <TextView
                android:id="@+id/SelecionImage"
                android:layout_width="129dp"
                android:layout_height="17dp"
                android:layout_marginStart="165dp"
                android:layout_marginLeft="165dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="169dp"
                android:layout_marginRight="169dp"
                android:layout_marginBottom="30dp"
                android:text="Selecciona imagen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.314"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPersonaje"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/imageButton2"
                style="@android:style/Widget.DeviceDefault.ImageButton"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="350dp"
                android:layout_marginLeft="350dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorHelp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_help" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextHistoria"
                android:layout_width="0dp"

                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="150dp"
                android:background="#3CFFFFFF"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/historia"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="300dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.149"
                app:srcCompat="@drawable/ic_action_edit" />


            <Button
                android:id="@+id/ButtonGuardar"
                android:layout_width="55dp"
                android:layout_height="50dp"
                android:layout_marginStart="68dp"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="50dp"
                android:background="@android:drawable/ic_menu_save"
                android:tint="#FFFFFF"
                app:backgroundTint="#FF9800"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextHistoria"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/ButtonEliminar"
                android:layout_width="61dp"
                android:layout_height="56dp"
                android:background="@android:drawable/ic_menu_delete"
                app:backgroundTint="#F44336"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.242"
                app:layout_constraintStart_toEndOf="@+id/ButtonGuardar"
                app:layout_constraintTop_toBottomOf="@+id/editTextHistoria"
                app:layout_constraintVertical_bias="0.532"
                app:srcCompat="@android:drawable/ic_menu_delete" />

            <Button
                android:id="@+id/ButtonEditar"
                android:layout_width="63dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_action_edit"
                app:backgroundTint="#47CC38"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toEndOf="@+id/ButtonEliminar"
                app:layout_constraintTop_toBottomOf="@+id/editTextHistoria"
                app:layout_constraintVertical_bias="0.538" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>